[tool.poetry]
name = "summerepi2"
version = "1.0.2"
readme = "README.md"
license = "BSD-2-Clause"
homepage = "http://summerepi.com/"
documentation = "http://summerepi.com/"
repository = "https://github.com/monash-emu/summer2"
keywords = [
    "epidemiology",
    "disease",
    "compartmental",
    "infectious",
]
description = "Summer is a compartmental disease modelling framework, written in Python. It provides a high-level API to build and run models."
authors = ["James Trauer <james.trauer@monash.edu>", "David Shipman <dshipman@gmail.com>", "Matthew Segal <mattdsegal@gmail.com>"]
packages = [
    {include = "summer2"}
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = ">=1.20.3"
networkx = ">=2.6.2"
pandas = ">=1.3.2"
plotly = ">=5.5.0"
computegraph = ">=0.3.6"
jax =  [
    {extras = ["cpu"], version = "^0.3.24", platform = "linux"},
    {extras = ["cpu"], version = "^0.3.24", platform = "darwin"},
]
sphinx-rtd-theme = {version = "^0.5.1", optional = true}
recommonmark = {version = "^0.7.1", optional = true}
nbsphinx = {version = "^0.8.2", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}
ipykernel  = {version = "^6.15.1", optional = true}
matplotlib = {version = ">=3.4.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^20.8b0"
matplotlib = ">=3.4.3"
Sphinx = "^3.5.2"
sphinx-rtd-theme = "^0.5.1"
recommonmark = "^0.7.1"
sphinxcontrib-napoleon = "^0.7"
jupyter = ">=1.0.0"
nbsphinx = "^0.8.2"
sphinx-autobuild = "^2021.3.14"
pytest-parallel = "^0.1.0"
pytest-benchmark = "^3.4.1"
isort = "^5.9.3"
pre-commit = "^2.19.0"


[tool.poetry.extras]
docs = ["sphinxcontrib-napoleon", "recommonmark", "nbsphinx", "sphinx_rtd_theme", "ipykernel", "matplotlib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-W ignore"
testpaths = ["tests"]

[tool.black]
line-length = 100
